--- a/app/templates/tournaments.html
+++ b/app/templates/tournaments.html
@@ -16,6 +16,7 @@
         <div class="card">
           <div class="card-body">
             <a href="{{ url_for('main.tournament', tournament_id=tournament.id) }}"><h5 class="card-title">{{tournament.name}}</h5></a>
+            <p class="lead">{{tournament.skill_lvl}}</p>
             <p class="card-text">{{tournament.description}}</p>
             <a href="#" class="btn btn-primary">Join</a>
             {% if current_user.id == tournament.user_id %}
