Updated changelog and added Tournaments howto entry

--- a/app/templates/howto.html
+++ b/app/templates/howto.html
@@ -65,5 +65,31 @@
   Your current email is displayed below your username.</p>
   <p>If you need to delete a score, you can do so either by selecting it on the Home page or from your own user score page (which can be accessed by clicking your username on one of your scores).
   At the bottom, you'll see a "Delete" button. Be careful with this, as there's no confirmation beforehand and the score cannot be recovered once deleted. It is not yet possible to edit scores.</p>
+  <hr />
+  <h3>Posting and Joining Tournaments</h3>
+  <p>The Tournaments dropdown has 2 buttons; Create and View. The View button will bring you to a list of tournaments where you have the option to either view the tournament details, or if you
+  created the entry, edit it. The Create button gives you a variety of options, which will be explained below.</p>
+  <table class="table" style="text-align: left">
+    <tr>
+      <th>Tournament Name</th>
+      <td>The name of the tournament</td>
+    </tr>
+    <tr>
+      <th>Skill Level</th>
+      <td>The skill level the tournament is aimed at. More info can be added in the description.</td>
+    </tr>
+    <tr>
+      <th>Description</th>
+      <td>Currently only supports single line descriptions; line breaks will not work. Include anything you want here!</td>
+    </tr>
+    <tr>
+      <th>Bracket Link</th>
+      <td>Post the URL for your brackets here! If it's a Challonge link, the bracket will be embedded on the tournament's page when someone hits "View".</td>
+    </tr>
+    <tr>
+      <th>Tournament Icon/Logo</th>
+      <td>You can use this file upload box to add an icon or logo to the tournament's View page. This won't show on the main Tournaments page, however.</td>
+    </tr>
+  </table>
 </div>
 {% endblock %}
