--- a/app/templates/howto.html
+++ b/app/templates/howto.html
@@ -87,6 +87,10 @@
       <td>Post the URL for your brackets here! If it's a Challonge link, the bracket will be embedded on the tournament's page when someone hits "View".</td>
     </tr>
     <tr>
+      <th>Contact Info</th>
+      <td>Add contact information (Discord, Twitter, Facebook, etc etc) here.</td>
+    </tr>
+    <tr>
       <th>Tournament Icon/Logo</th>
       <td>You can use this file upload box to add an icon or logo to the tournament's View page. This won't show on the main Tournaments page, however.</td>
     </tr>
