--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -18,22 +18,33 @@
       <div class="article-metadata">
         <small class="text-muted">{{ tournament.date_posted.strftime('%Y-%m-%d') }}</small>
       </div>
-      <h2 class="article-title">{{ tournament.name }}</h2>
+      <h2 class="article-title" style="padding: 5pt">{{ tournament.name }}</h2>
       <div style="padding: 10px">
         {{tournament.description}}
       </div>
       <hr />
+      <div style="padding: 10px">
+        <h4>Organizer Contact Information</h4>
+        {{tournament.contactinfo}}
+      </div>
+      <hr />
       {% if "challonge" in tournament.bracketlink %}
-      <div style="padding-bottom: 10pt; padding-left: 5pt; padding-right: 5pt">
-        <iframe src="{{tournament.bracketlink}}/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-      </div>
+        <div style="padding-bottom: 10pt; padding-left: 5pt; padding-right: 5pt">
+          <iframe src="{{tournament.bracketlink}}/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+        </div>
+        <a href="{{tournament.bracketlink}}"><small>Bracket Link</small></a>
+      {% elif tournament.bracketlink != "None" %}
+        <p><a href="{{tournament.bracketlink}}">Bracket Link</a> [Not a Challonge link, unable to embed!]</p>
+      {% else %}
+        <p>No bracket link provided. See organizer for information.</p>
       {% endif %}
+      <hr />
       {% if tournament.user_id == current_user.id %}
-      <div>
-        <form action="{{ url_for('main.edit_tournament', tournament_id=tournament.id) }}">
-          <input type="submit" class="btn btn-info m-1" value="Edit">
-        </form>
-      </div>
+        <div>
+          <form action="{{ url_for('main.edit_tournament', tournament_id=tournament.id) }}">
+            <input type="submit" class="btn btn-info m-1" value="Edit">
+          </form>
+        </div>
       {% endif %}
     </div>
   </article>
