--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -40,11 +40,18 @@
       {% endif %}
       <hr />
       {% if tournament.user_id == current_user.id %}
+      <div>
         <div>
           <form action="{{ url_for('main.edit_tournament', tournament_id=tournament.id) }}">
             <input type="submit" class="btn btn-info m-1" value="Edit">
           </form>
         </div>
+        <div>
+          <form action="{{ url_for('main.delete_tournament', tournament_id=tournament.id) }}" method="POST">
+            <input type="submit" class="btn btn-danger m-1" value="Delete">
+          </form>
+        </div>
+      </div>
       {% endif %}
     </div>
   </article>
