--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,6 +11,7 @@
   </head>
   {% block body %}
     <h1>Newest Scores</h1>
+    <h4>{{ total }} Total Scores</h4>
     <hr class="my-4">
     {% for score in scores.items %}
       <article class="media content-section" style="overflow: auto; max-width: 100%">
