More quality of life updates

--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -6,6 +6,7 @@
       <meta property="og:title" content="{{tournament.name}}"/>
       <meta property="og:description" content="{{tournament.description}}"/>
       <meta property="og:url" content="{{ request.url }}">
+      <meta name="theme-color" content="#99beea">
     {% endblock meta %}
   {% endblock %}
 </head>
