--- a/app/templates/tournaments.html
+++ b/app/templates/tournaments.html
@@ -6,6 +6,7 @@
       <meta property="og:title" content="Arrow Tracker: Join Tournament"/>
       <meta property="og:description" content="A handy score tracking utility for PIU XX with screenshot support"/>
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
+      <meta name="theme-color" content="#99beea">
     {% endblock meta %}
   {% endblock %}
 </head>
