--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -6,6 +6,9 @@
       <meta property="og:title" content="{{ score.song }} {{score.type[0].capitalize()}}{{score.difficulty}}"/>
       <meta property="og:description" content="Score: {{score.score}} | Grade: {{score.lettergrade.upper()}} | Author: {{score.author.username}}"/>
       <meta property="og:url" content="{{ request.url }}">
+      <!--
+        TODO: Set site colour scheme according to letter grade colour
+      -->
     {% endblock meta %}
   {% endblock %}
 </head>
