--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -6,9 +6,15 @@
       <meta property="og:title" content="{{ score.song }} {{score.type[0].capitalize()}}{{score.difficulty}}"/>
       <meta property="og:description" content="Score: {{score.score}} | Grade: {{score.lettergrade.upper()}} | Author: {{score.author.username}}"/>
       <meta property="og:url" content="{{ request.url }}">
-      <!--
-        TODO: Set site colour scheme according to letter grade colour
-      -->
+      {% if score.lettergrade in bluegrades and score.stagepass == "True" %}
+        <meta name="theme-color" content="#176ac8">
+      {% elif score.lettergrade in goldgrades and score.stagepass == "True" %}
+        <meta name="theme-color" content="#ecc019">
+      {% elif score.lettergrade in redgrades and score.stagepass == "True" %}
+        <meta name="theme-color" content="#d21b0b">
+      {% else %}
+        <meta name="theme-color" content="#bab8ba">
+      {% endif %}
     {% endblock meta %}
   {% endblock %}
 </head>
