--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -23,6 +23,9 @@
         <a class="nav-link" href="/howto">How To Use</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/members">Members</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
       </li>
       <li class="nav-item dropdown">
