Work on Weekly Challenge page started

--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -26,6 +26,9 @@
         <a class="nav-link" href="/members">Members</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/challenge/weekly">Weekly Challenge</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
       </li>
       <li class="nav-item dropdown">
