--- a/app/templates/weekly.html
+++ b/app/templates/weekly.html
@@ -8,6 +8,11 @@
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
       <meta name="theme-color" content="#99beea">
     {% endblock meta %}
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("body").tooltip({ selector: '[data-toggle=tooltip]' });
+      });
+    </script>
   {% endblock head %}
 </head>
 {% block body %}
@@ -72,7 +77,10 @@
               {% endif %}
             </div>
             <div class="col">
-              {{ form.difficulty.label(class="form-control-label") }}
+              <div>
+                {{ form.difficulty.label(class="form-control-label") }}
+                <a href="#" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
+              </div>
               {% if form.difficulty.errors %}
                 {{ form.difficulty(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
