--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -14,15 +14,6 @@
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/resources">Resources</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/howto">How To Use</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="/members">Members</a>
       </li>
       <li class="nav-item">
@@ -30,6 +21,17 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/search">Song Leaderboards</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Info & About
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="/howto">How To Use</a>
+          <a class="nav-link" href="/resources">Resources</a>
+          <a class="nav-link" href="https://discord.gg/EfExC7H">Discord Server</a>
+        </div>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
