Information hover icon is no longer a link

--- a/app/templates/weekly.html
+++ b/app/templates/weekly.html
@@ -79,7 +79,7 @@
             <div class="col">
               <div>
                 {{ form.difficulty.label(class="form-control-label") }}
-                <a href="#" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
+                <a style="color: #4fbcf7" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
               </div>
               {% if form.difficulty.errors %}
                 {{ form.difficulty(class="form-control form-control-lg is-invalid") }}
