--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
   <img src="{{ url_for('static', filename='newlogo-arrow-smaller.png') }}" alt="Arrow Tracker" style="padding-right: 10pt">
   <a class="navbar-brand" href="/">Arrow Tracker</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
