js can go die also small aesthetics update

--- a/app/templates/new_score.html
+++ b/app/templates/new_score.html
@@ -8,6 +8,11 @@
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
       <meta name="theme-color" content="#99beea">
     {% endblock meta %}
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("body").tooltip({ selector: '[data-toggle=tooltip]' });
+      });
+    </script>
   {% endblock %}
 </head>
 {% block body %}
@@ -71,14 +76,11 @@
               {{ form.type(class="form-control form-control-lg") }}
             {% endif %}
           </div>
-          <!--<div class="col">
-            {{ form.difficulty.label(class="form-control-label") }}
-            <select id="difficultyDropdown" class="form-control form-control-lg">
-
-            </select>
-          </div>-->
           <div class="col">
-            {{ form.difficulty.label(class="form-control-label") }}
+            <div>
+              {{ form.difficulty.label(class="form-control-label") }}
+              <a style="color: #4fbcf7" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
+            </div>
             {% if form.difficulty.errors %}
               {{ form.difficulty(class="form-control form-control-lg is-invalid") }}
               <div class="invalid-feedback">
