--- a/app/templates/weekly.html
+++ b/app/templates/weekly.html
@@ -19,7 +19,8 @@
   <h2>Weekly Challenge</h2>
   <hr />
   <div class="jumbotron text-center">
-    <h1 class="display-4">「{{ current_weekly }}」</h1>
+    <h1 class="display-4">「{{ current_weekly[0] }}」</h1>
+    <h2>{{ current_weekly[1] }}</h2>
     <hr />
     <p class="lead">
       Submit scores for the weekly challenge below! Users with top scores at the end of the week will earn points on their profiles once this feature is completely finished. For now, it's all for fun!
