--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -16,18 +16,33 @@
       {{ form.hidden_tag() }}
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Song Leaderboards</legend>
-        <div class="form-group">
-          {{ form.song.label(class="form-control-label") }}
-          {% if form.song.errors %}
-            {{ form.song(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              {% for error in form.song.errors %}
-                <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.song(class="form-control form-control-lg") }}
-          {% endif %}
+        <div class="form-row">
+          <div class="form-group col">
+            {{ form.song.label(class="form-control-label") }}
+            {% if form.song.errors %}
+              {{ form.song(class="form-control form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.song.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+            {% else %}
+              {{ form.song(class="form-control form-control-lg") }}
+            {% endif %}
+          </div>
+          <div class="form-group col">
+            {{ form.length.label(class="form-control-label") }}
+            {% if form.length.errors %}
+              {{ form.length(class="form-control form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.length.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+            {% else %}
+              {{ form.length(class="form-control form-control-lg") }}
+            {% endif %}
+          </div>
         </div>
         <div class="form-group">
           {{ form.filters.label(class="form-control-label") }}
