--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -15,6 +15,7 @@
       {% else %}
         <meta name="theme-color" content="#bab8ba">
       {% endif %}
+      <meta name="robots" content="none">
     {% endblock meta %}
   {% endblock %}
 </head>
