--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,6 +7,7 @@
       <meta property="og:description" content="A handy score tracking utility for PIU XX with screenshot support"/>
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
       <meta name="theme-color" content="#99beea">
+      <meta name="robots" content="index, nofollow">
     {% endblock meta %}
   {% endblock %}
 </head>
