--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -7,6 +7,7 @@
       <meta property="og:description" content="{{tournament.description}}"/>
       <meta property="og:url" content="{{ request.url }}">
       <meta name="theme-color" content="#99beea">
+      <meta name="robots" content="none">
     {% endblock meta %}
   {% endblock %}
 </head>
