--- a/app/templates/resources.html
+++ b/app/templates/resources.html
@@ -33,8 +33,12 @@
         <td><a href="https://docs.google.com/spreadsheets/d/101BGhr8oaTc-F4D3_s0rep__Wyru3iGHwPWAEhSakbQ">Google Spreadsheet</a></td>
       </tr>
       <tr>
-        <th>PIU XX Song and Title Unlocks List</th>
+        <th>Codelock's PIU XX Song and Title Unlocks Guide</th>
         <td><a href="https://docs.google.com/spreadsheets/d/1pdZ0NtbrDQpKqyrnkaZfycwqsNS-UNGQWQAaUvdlWyg">Google Spreadsheet</a></td>
+      </tr>
+      <tr>
+        <th>Kyle's PIU XX Song and Title Unlock Guide</th>
+        <td><a href="https://docs.google.com/spreadsheets/d/1YOUOZogs5I0YlMw-1uBI7HXaMAZKjRg5h0XJ4csJh7Y/edit#gid=33808989">Google Spreadsheet</a></td>
       </tr>
     </table>
 </div>
