New score submission with difficulty works now

--- a/app/templates/new_score.html
+++ b/app/templates/new_score.html
@@ -78,41 +78,12 @@
             {% endif %}
           </div>
           <div class="col">
-            {{ form.type.label(class="form-control-label") }}
-            {% if form.type.errors %}
-              {{ form.type(class="form-control form-control-lg is-invalid") }}
-              <div class="invalid-feedback">
-                {% for error in form.type.errors %}
-                  <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-            {% else %}
-              {{ form.type(class="form-control form-control-lg") }}
-            {% endif %}
-          </div>
-          <div class="col">
             <div>
-              {{ form.difficulty.label(class="form-control-label") }}
+              <label class="form-control-label" for="difficulty">Difficulty</label>
               <a style="color: #4fbcf7" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
             </div>
             <select id="difficultyDropdown" class="form-control form-control-lg" name="diffDrop"></select>
           </div>
-          <!--<div class="col">
-            <div>
-              {{ form.difficulty.label(class="form-control-label") }}
-              <a style="color: #4fbcf7" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
-            </div>
-            {% if form.difficulty.errors %}
-              {{ form.difficulty(class="form-control form-control-lg is-invalid") }}
-              <div class="invalid-feedback">
-                {% for error in form.difficulty.errors %}
-                  <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-            {% else %}
-              {{ form.difficulty(id="difficultyDropdown", class="form-control form-control-lg") }}
-            {% endif %}
-          </div>-->
         </div>
         <div class="form-row" style="padding: 5pt">
           <div class="col">
