--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -32,7 +32,12 @@
         {% endif %}
       </td>
       <td>{{score.length}}</td>
-      <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
+      <td>
+        {% if score.type != "None" %}
+          {{score.type.capitalize()}}
+        {% endif %}
+        {{score.difficulty}}
+      </td>
       <td>{{score.lettergrade.upper()}}</td>
       <td>{{score.score}}</td>
       {% if score.stagepass == "True" %}
