--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -45,7 +45,12 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>{{score.type.capitalize()}} {{score.difficulty}}</td>
+                    <td>
+                      {% if score.type != "None" %}
+                        {{score.type.capitalize()}}
+                      {% endif %}
+                      {{score.difficulty}}
+                    </td>
                     <td>{{score.lettergrade.upper()}}</td>
                     <td>{{score.score}}</td>
                     {% if score.stagepass == "True" %}
