small aesthetic update

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -95,7 +95,7 @@
           {% endif %}
         {% else %}
           <li class="page-item disabled">
-            <a class="btn btn-outline-info mb-4"">...</a>
+            <a class="page-link mb-4"">...</a>
           </li>
         {% endif %}
       {% endfor %}
