--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -20,10 +20,37 @@
       </div>
     </div>
     <div class="content-section">
+      <legend class="border-bottom mb-4">Update Account Details</legend>
+      <div>
+        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#premadePfp" aria-expanded="false" aria-controls="collapseExample">
+          Pick a Profile Image
+        </button>
+      </div><br>
+      <div class="content-section collapse" id="premadePfp">
+        <form action="{{ url_for('users.update_pfp') }}" method="POST">
+          <div class="btn-group" role="group" aria-label="Default Profile Images">
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default1.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default1.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default2.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default2.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default3.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default3.jpg') }}" /></button>
+          </div><br>
+          <div class="btn-group" role="group" aria-label="Default Profile Images">
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default4.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default4.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default5.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default5.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default6.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default6.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default7.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default7.jpg') }}" /></button>
+          </div><br>
+          <div class="btn-group" role="group" aria-label="Default Profile Images">
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default8.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default8.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default9.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default9.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default10.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default10.jpg') }}" /></button>
+            <button type="submit" class="btn btn-secondary" name="submit_button" value="default11.jpg"><img class="rounded" width="60pt" src="{{ url_for('static', filename='profile_pics/default11.jpg') }}" /></button>
+          </div><br>
+        </form>
+      </div>
       <form action="" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-          <legend class="border-bottom mb-4">Update Account Details</legend>
           <div class="form-group">
             {{ form.username.label(class="form-control-label") }}
             {% if form.username.errors %}
@@ -65,6 +92,7 @@
             {% endif %}
           </div>
           -->
+          <hr>
           <div class="form-group">
             {{ form.picture.label() }}
             {{ form.picture(class="form-control-file") }}
